--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -1,75 +1,40 @@
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
+.item-container { position: relative;}
+@media (max-width: 767px){
+.col-sm-12 {width: 100%;}
 
-h1 {
-	margin-bottom: 15px;
-	text-align: center;
-	padding-top: 45px;
-	padding-bottom: 50px;
-}
+@media (max-width: 767px)
+.col-sm-12 { float: left; 
+	margin-left: auto; 
+	margin-right: auto; 
+	padding: 15px;}
 
-p {
-	border: 1px solid blue;
-	background-color: grey;
-	width: 100%;
-	height: 150px;
-	margin-right: auto;
-	margin-left: auto;
-	font-family: Helvetica;
-	color: white;
+.row{width: 100%;}
 
-}
+*{box-sizing: border-box;}
+div{ display: block;}
 
-.p1,.p2,.p3{
-	padding: 10px;
-}
+.item { position: relative; 
+	border: 1px solid black; 
+	background-color: grey;}
 
-/***********start of responsive design**************/
+h1, p{font-family: Helvetica;}
+h1.page-title{margin-bottom: 15px; 
+	text-align: center; 
+	font-size: 175%;}
 
-.row {
-	width: 100%;
-}
+.item-container:nth-of-type(3)>
+.item>h1{background-color:green; 
+	color: white;}
 
-/******* Large Device *********/
+.item-container:nth-of-type(1)>
+.item>h1{background-color:green; 
+	color: white;}
 
-@media (min-width: 992px) {
-	.p1, .p2, .p3 {
-		float: left;
-		border: 1px solid black;
-	}
-	.p1 {
-		width: 33.33%
-	}
-	.p2 {
-		width: 33.33%
-	}
-	.p3 {
-		width: 33.33%
-	}
-}
 
-	
-/******** Meduim Devices  **********/
-@media (min-width: 768px) and (max-width: 991px) {
-	.p1, .p2, {
-		 
+.item>h1 {font:size:125%; 
+	position:absolute; padding:5px 15px 5px 15px; 
+	margin:0; display:block; right:0; 
+	border-left:1px solid back; 
+	border-bottom:1px solid black;}
 
-	}
-
-	.p1 {
-		width: 50%;
-		height: 150px;
-	}
-	.p2 {
-		width: 50%;
-		height: 150px;
-	}
-	.p3 {
-		width: 100%;
-		height: 150px;
-	}
-}
-	
+.item>p {padding:10px; margin-top:30px;}
