--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -1,40 +1,112 @@
-.item-container { position: relative;}
-@media (max-width: 767px){
-.col-sm-12 {width: 100%;}
+@media (max-width: 992px){
+	.box{
+		width: 26%;
+	}
+	.paragraph{
+		margin-top: 12%;
+	
+	}
+}
+@media (min-width: 722px) and (max-width: 991px){
+	.box{
+		width:30%;
+	}
+	.paragraph{
+		margin-top: 15%;
+	
+	}
+}
+@media (max-width: 721px){
+	.box{
+		width: 45%;
+	}
+	.paragraph{
+		margin-top: 15%;
+	
+	}
+	.box:nth-child(4){
+		width: 93%;
+	}
+}
+@media (max-width: 537px){
+	.box{
+		width: 95%;
+	}
+}
 
-@media (max-width: 767px)
-.col-sm-12 { float: left; 
-	margin-left: auto; 
-	margin-right: auto; 
-	padding: 15px;}
+.box{
+	display:inline-block;
+	height:auto;
+	position: relative;
+	border:3px solid black;
+	width:30%;
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-left: 2%;
+	margin-bottom: 3%;
+	background-color: #999999;
+	box-sizing: border-box;
+}
+.inbox{
+	position: absolute;
+	top:0px;
+	right: 0px;
+	border:1px solid black;
+	width: 40%;
+	font-size: 22px;
+	text-align: center;
+	font-family: Helvetica, Arial Rounded MT Bold;
+	padding: inherit;
 
-.row{width: 100%;}
-
-*{box-sizing: border-box;}
-div{ display: block;}
-
-.item { position: relative; 
-	border: 1px solid black; 
-	background-color: grey;}
-
-h1, p{font-family: Helvetica;}
-h1.page-title{margin-bottom: 15px; 
-	text-align: center; 
-	font-size: 175%;}
-
-.item-container:nth-of-type(3)>
-.item>h1{background-color:green; 
-	color: white;}
-
-.item-container:nth-of-type(1)>
-.item>h1{background-color:green; 
-	color: white;}
-
-
-.item>h1 {font:size:125%; 
-	position:absolute; padding:5px 15px 5px 15px; 
-	margin:0; display:block; right:0; 
-	border-left:1px solid back; 
-	border-bottom:1px solid black;}
-
-.item>p {padding:10px; margin-top:30px;}
+}
+#Chicken{
+	background-color: #d59898;
+}
+#Beef{
+	background-color: #c14543;
+	color:#ffffff;
+}
+#Sushi{
+	background-color: #e5d198;
+}
+#Chicken{
+	background-color: #d59898;
+	position: absolute;
+	top:0px;
+	right: 0px;
+	padding: 1%;
+	font-family: Helvetica, Arial Rounded MT Bold;
+	border:1px solid black;
+	width: 30%;
+	font-size: 19px;
+	text-align: center;
+}
+#Beef{
+	background-color: #c14543;
+	color: #fefdf6;
+	position: absolute;
+	top:0px;
+	right: 0px;
+	padding: 1%;
+	font-family: Helvetica, Arial Rounded MT Bold;
+	border:1px solid black;
+	width: 30%;
+	font-size: 19px;
+	text-align: center;
+}
+#Sushi{
+	background-color: #e5d198;
+	position: absolute;
+	top:0px;
+	right: 0px;
+	padding: 1%;
+	font-family: Helvetica, Arial Rounded MT Bold;
+	border:1px solid black;
+	width: 30%;
+	font-size: 19px;
+	text-align: center;
+}
+.paragraph{
+	margin-top:10%;
+	font-size: 20px;
+}
